force-app/main/default/objects/TestA__c/TestA__c.object-meta.xml
<CustomObject>
    <label>TestA</label>
    <nameField>
        <label>TestA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>