force-app/main/default/objects/TestA__c/fields/Auto_Business_Ways__c.field-meta.xml
<CustomField>
    <fullName>Auto_Business_Ways__c</fullName>
    <label>Auto Business Ways</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WFR</fullName>
                <default>true</default>
                <label>WFR</label>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>