force-app/main/default/objects/TestA__c/fields/TestFormulaRECID__c.field-meta.xml
<CustomField>
    <fullName>TestFormulaRECID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TestFormulaRECID</label>
    <type>Text</type>
</CustomField>