force-app/main/default/objects/TestA__c/fields/TestPickList__c.field-meta.xml
<CustomField>
    <fullName>TestPickList__c</fullName>
    <label>TestPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
                <default>true</default>
                <label>Initial</label>
            </value>
            <value>
                <fullName>Record Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>