force-app/main/default/objects/TestA__c/fields/Updated_TextField__c.field-meta.xml
<CustomField>
    <fullName>Updated_TextField__c</fullName>
    <externalId>true</externalId>
    <label>Updated TextField</label>
    <length>30</length>
    <type>Text</type>
</CustomField>